fix event ending alignment

--- a/packages/augur-ui/src/modules/common/progress.styles.less
+++ b/packages/augur-ui/src/modules/common/progress.styles.less
@@ -57,6 +57,10 @@
   }
 
   &.AlignRight {
+    > span:first-of-type {
+      margin-right: 0;
+    }
+    
     > span:last-of-type {
       text-align: right;
     }
